possibly fixed layout issues on phones

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -126,9 +126,12 @@ table {
 /* End of Reset CSS */
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto';
+  font-family: 'Roboto';
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
